--- a/dao-datasource/dao-druid/pom.xml
+++ b/dao-datasource/dao-druid/pom.xml
@@ -9,7 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dao-sqlserver</artifactId>
+    <artifactId>dao-druid</artifactId>
 
+    <properties>
+        <druid-version>1.1.20</druid-version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${druid-version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
